--- a/miniprogram/jcclub/pages/index/index.wxml
+++ b/miniprogram/jcclub/pages/index/index.wxml
@@ -1,16 +1,25 @@
+<!-- 搜索输入框 -->
+<i-panel>
+    <i-input value="{{title}}" type="text" placeholder="找人才,找团队,开启创业之旅吧" />
+</i-panel>
+
+<!-- 轮播图 -->
 <view class="swiper-container">
   <swiper indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}" circular="{{duration}}" current="{{swiperCurrent}}" bindchange="swiperChange" class="swiper">
     <block wx:for="{{imgUrls}}" wx:key="unique">
       <swiper-item>
-        <image src="{{item}}" class="img" bindtap="swipclick" />
+        <image src="{{item}}" class="img" />
       </swiper-item>
     </block>
   </swiper>
 </view>
+
+<i-card title="赛事速递" thumb="/images/red.png" full="true"></i-card>
+
+<!-- 咨询页面 -->
 <i-cell-group>
-    <view wx:for="{{array}}">
-          <image style='width: 200px; height: 200px; background-color: #eeeeee;'
-          mode="{{item.message}}" src="https://img1.doubanio.com/view/photo/l/public/p2463041948.webp" bindtap='imageClick'></image>
-         <i-cell title="{{item.message}}" is-link url="/pages/personal/personal"></i-cell></view>
+    <view wx:for="{{articles}}">
+          <image style='width: 300px; height: 200px;' src="{{item.imageUrl}}" bindtap='imageClick' data-articleUrl='{{item.articleUrl}}'></image>
+     <i-cell title="{{item.title}}"></i-cell></view>
 </i-cell-group>
 
