--- a/miniprogram/jcclub/pages/personal/personal.wxml
+++ b/miniprogram/jcclub/pages/personal/personal.wxml
@@ -1,2 +1,9 @@
-<!--pages/personal/personal.wxml-->
-<text>pages/personal/personal.wxml</text>
+<i-button wx:if="{{!hasUserInfo && canIUse && getUserInfoFail}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo" type="success" shape="circle">获取个人信息</i-button>
+
+<view wx:if="{{hasUserInfo && hasUserInfoId}}">
+  <i-card title="{{userInfo.nickName}}" thumb="{{userInfo.avatarUrl}}"></i-card>
+<i-button bind:click="myInfo" type="success" shape="circle" size="small">我的信息</i-button>
+<i-button bind:click="handleClick" type="primary" shape="circle" size="small">我的投递</i-button>
+<i-button bind:click="handleClick" type="success" shape="circle" size="small">人才投递查看</i-button>
+</view>
+
