--- a/miniprogram/jcclub/pages/personalInfo/personalInfo.wxml
+++ b/miniprogram/jcclub/pages/personalInfo/personalInfo.wxml
@@ -9,4 +9,9 @@
 </i-panel>
 
 <i-button bind:click="saveInfo" type="success" shape="circle" size="small" >保存</i-button>
-<i-button bind:click="publish" type="primary" shape="circle" size="small" >发布到人才库</i-button>
+<view  wx:if="{{talentInfo.isPublish != 1}}">
+    <i-button bind:click="publish" data-publish='{{1}}' type="primary" shape="circle" size="small" >发布到人才库</i-button>
+</view>
+<view  wx:if="{{!talentInfo.isPublish != 0}}">
+    <i-button bind:click="publish" data-publish='{{0}}' type="primary" shape="circle" size="small" >取消发布</i-button>
+</view>
